contrib/libs/pdfium/public/fpdfview.h

typedef struct fpdf_annotation_t__* FPDF_ANNOTATION;
typedef struct fpdf_attachment_t__* FPDF_ATTACHMENT;
typedef struct fpdf_avail_t__* FPDF_AVAIL;
typedef struct fpdf_bookmark_t__* FPDF_BOOKMARK;
typedef struct fpdf_document_t__* FPDF_DOCUMENT;
typedef struct fpdf_form_handle_t__* FPDF_FORMHANDLE;
typedef struct fpdf_link_t__* FPDF_LINK;
typedef struct fpdf_page_t__* FPDF_PAGE;
typedef int FPDF_BOOL;
typedef unsigned short FPDF_WCHAR;
typedef const char* FPDF_BYTESTRING;
typedef const FPDF_WCHAR* FPDF_WIDESTRING;
typedef struct FS_POINTF_ {
  float x;
  float y;
} * FS_LPPOINTF, FS_POINTF;
typedef int FPDF_ANNOTATION_SUBTYPE;
typedef int FPDF_OBJECT_TYPE;
typedef struct {
  unsigned long m_FileLen;
  int (*m_GetBlock)(void* param,
                    unsigned long position,
                    unsigned char* pBuf,
                    unsigned long size);
  void* m_Param;
} FPDF_FILEACCESS;