contrib/python/pypdfium2/pypdfium2_raw/bindings.py


# ./fpdf_annot.h: 656
FPDFAnnot_GetLinkedAnnot = _libs['pdfium']['FPDFAnnot_GetLinkedAnnot']
FPDFAnnot_GetLinkedAnnot.argtypes = (FPDF_ANNOTATION, FPDF_BYTESTRING)
FPDFAnnot_GetLinkedAnnot.restype = FPDF_ANNOTATION

# ./fpdf_annot.h: 664
FPDFAnnot_GetFlags = _libs['pdfium']['FPDFAnnot_GetFlags']
FPDFAnnot_GetFlags.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_GetFlags.restype = c_int

# ./fpdf_annot.h: 673
FPDFAnnot_SetFlags = _libs['pdfium']['FPDFAnnot_SetFlags']
FPDFAnnot_SetFlags.argtypes = (FPDF_ANNOTATION, c_int)
FPDFAnnot_SetFlags.restype = FPDF_BOOL

# ./fpdf_annot.h: 685
FPDFAnnot_GetFormFieldFlags = _libs['pdfium']['FPDFAnnot_GetFormFieldFlags']
FPDFAnnot_GetFormFieldFlags.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FPDFAnnot_GetFormFieldFlags.restype = c_int

# ./fpdf_annot.h: 716
FPDFAnnot_GetFormFieldAtPoint = _libs['pdfium']['FPDFAnnot_GetFormFieldAtPoint']
FPDFAnnot_GetFormFieldAtPoint.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE, POINTER(FS_POINTF))
FPDFAnnot_GetFormFieldAtPoint.restype = FPDF_ANNOTATION

# ./fpdf_annot.h: 734
FPDFAnnot_GetFormFieldName = _libs['pdfium']['FPDFAnnot_GetFormFieldName']
FPDFAnnot_GetFormFieldName.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetFormFieldName.restype = c_ulong

# ./fpdf_annot.h: 754
FPDFAnnot_GetFormFieldAlternateName = _libs['pdfium']['FPDFAnnot_GetFormFieldAlternateName']
FPDFAnnot_GetFormFieldAlternateName.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetFormFieldAlternateName.restype = c_ulong

# ./fpdf_annot.h: 770
FPDFAnnot_GetFormFieldType = _libs['pdfium']['FPDFAnnot_GetFormFieldType']
FPDFAnnot_GetFormFieldType.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FPDFAnnot_GetFormFieldType.restype = c_int

# ./fpdf_annot.h: 786
FPDFAnnot_GetFormFieldValue = _libs['pdfium']['FPDFAnnot_GetFormFieldValue']
FPDFAnnot_GetFormFieldValue.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetFormFieldValue.restype = c_ulong

# ./fpdf_annot.h: 801
FPDFAnnot_GetOptionCount = _libs['pdfium']['FPDFAnnot_GetOptionCount']
FPDFAnnot_GetOptionCount.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FPDFAnnot_GetOptionCount.restype = c_int

# ./fpdf_annot.h: 823
FPDFAnnot_GetOptionLabel = _libs['pdfium']['FPDFAnnot_GetOptionLabel']
FPDFAnnot_GetOptionLabel.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, c_int, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetOptionLabel.restype = c_ulong

# ./fpdf_annot.h: 841
FPDFAnnot_IsOptionSelected = _libs['pdfium']['FPDFAnnot_IsOptionSelected']
FPDFAnnot_IsOptionSelected.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, c_int)
FPDFAnnot_IsOptionSelected.restype = FPDF_BOOL

# ./fpdf_annot.h: 858
FPDFAnnot_GetFontSize = _libs['pdfium']['FPDFAnnot_GetFontSize']
FPDFAnnot_GetFontSize.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, POINTER(c_float))
FPDFAnnot_GetFontSize.restype = FPDF_BOOL

# ./fpdf_annot.h: 894
FPDFAnnot_GetFontColor = _libs['pdfium']['FPDFAnnot_GetFontColor']
FPDFAnnot_GetFontColor.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, POINTER(c_uint), POINTER(c_uint), POINTER(c_uint))
FPDFAnnot_GetFontColor.restype = FPDF_BOOL

# ./fpdf_annot.h: 909
FPDFAnnot_IsChecked = _libs['pdfium']['FPDFAnnot_IsChecked']
FPDFAnnot_IsChecked.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FPDFAnnot_IsChecked.restype = FPDF_BOOL

# ./fpdf_annot.h: 924
FPDFAnnot_SetFocusableSubtypes = _libs['pdfium']['FPDFAnnot_SetFocusableSubtypes']
FPDFAnnot_SetFocusableSubtypes.argtypes = (FPDF_FORMHANDLE, POINTER(FPDF_ANNOTATION_SUBTYPE), c_size_t)
FPDFAnnot_SetFocusableSubtypes.restype = FPDF_BOOL

# ./fpdf_annot.h: 937
FPDFAnnot_GetFocusableSubtypesCount = _libs['pdfium']['FPDFAnnot_GetFocusableSubtypesCount']
FPDFAnnot_GetFocusableSubtypesCount.argtypes = (FPDF_FORMHANDLE, )
FPDFAnnot_GetFocusableSubtypesCount.restype = c_int

# ./fpdf_annot.h: 953
FPDFAnnot_GetFocusableSubtypes = _libs['pdfium']['FPDFAnnot_GetFocusableSubtypes']
FPDFAnnot_GetFocusableSubtypes.argtypes = (FPDF_FORMHANDLE, POINTER(FPDF_ANNOTATION_SUBTYPE), c_size_t)
FPDFAnnot_GetFocusableSubtypes.restype = FPDF_BOOL

# ./fpdf_annot.h: 964
FPDFAnnot_GetLink = _libs['pdfium']['FPDFAnnot_GetLink']
FPDFAnnot_GetLink.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_GetLink.restype = FPDF_LINK

# ./fpdf_annot.h: 978
FPDFAnnot_GetFormControlCount = _libs['pdfium']['FPDFAnnot_GetFormControlCount']
FPDFAnnot_GetFormControlCount.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FPDFAnnot_GetFormControlCount.restype = c_int

# ./fpdf_annot.h: 992
FPDFAnnot_GetFormControlIndex = _libs['pdfium']['FPDFAnnot_GetFormControlIndex']
FPDFAnnot_GetFormControlIndex.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FPDFAnnot_GetFormControlIndex.restype = c_int

# ./fpdf_annot.h: 1009
FPDFAnnot_GetFormFieldExportValue = _libs['pdfium']['FPDFAnnot_GetFormFieldExportValue']
FPDFAnnot_GetFormFieldExportValue.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetFormFieldExportValue.restype = c_ulong

# ./fpdf_annot.h: 1021
FPDFAnnot_SetURI = _libs['pdfium']['FPDFAnnot_SetURI']
FPDFAnnot_SetURI.argtypes = (FPDF_ANNOTATION, POINTER(c_char))
FPDFAnnot_SetURI.restype = FPDF_BOOL

# ./fpdf_annot.h: 1031
FPDFAnnot_GetFileAttachment = _libs['pdfium']['FPDFAnnot_GetFileAttachment']
FPDFAnnot_GetFileAttachment.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_GetFileAttachment.restype = FPDF_ATTACHMENT

# ./fpdf_annot.h: 1041
FPDFAnnot_AddFileAttachment = _libs['pdfium']['FPDFAnnot_AddFileAttachment']
FPDFAnnot_AddFileAttachment.argtypes = (FPDF_ANNOTATION, FPDF_WIDESTRING)
FPDFAnnot_AddFileAttachment.restype = FPDF_ATTACHMENT

# ./fpdf_attachment.h: 22
FPDFDoc_GetAttachmentCount = _libs['pdfium']['FPDFDoc_GetAttachmentCount']
FPDFDoc_GetAttachmentCount.argtypes = (FPDF_DOCUMENT, )
FPDFDoc_GetAttachmentCount.restype = c_int

# ./fpdf_attachment.h: 35
FPDFDoc_AddAttachment = _libs['pdfium']['FPDFDoc_AddAttachment']
FPDFDoc_AddAttachment.argtypes = (FPDF_DOCUMENT, FPDF_WIDESTRING)
FPDFDoc_AddAttachment.restype = FPDF_ATTACHMENT

# ./fpdf_attachment.h: 46
FPDFDoc_GetAttachment = _libs['pdfium']['FPDFDoc_GetAttachment']
FPDFDoc_GetAttachment.argtypes = (FPDF_DOCUMENT, c_int)
FPDFDoc_GetAttachment.restype = FPDF_ATTACHMENT

# ./fpdf_attachment.h: 59
FPDFDoc_DeleteAttachment = _libs['pdfium']['FPDFDoc_DeleteAttachment']
FPDFDoc_DeleteAttachment.argtypes = (FPDF_DOCUMENT, c_int)
FPDFDoc_DeleteAttachment.restype = FPDF_BOOL

# ./fpdf_attachment.h: 72
FPDFAttachment_GetName = _libs['pdfium']['FPDFAttachment_GetName']
FPDFAttachment_GetName.argtypes = (FPDF_ATTACHMENT, POINTER(FPDF_WCHAR), c_ulong)
FPDFAttachment_GetName.restype = c_ulong

# ./fpdf_attachment.h: 84
FPDFAttachment_HasKey = _libs['pdfium']['FPDFAttachment_HasKey']
FPDFAttachment_HasKey.argtypes = (FPDF_ATTACHMENT, FPDF_BYTESTRING)
FPDFAttachment_HasKey.restype = FPDF_BOOL

# ./fpdf_attachment.h: 95
FPDFAttachment_GetValueType = _libs['pdfium']['FPDFAttachment_GetValueType']
FPDFAttachment_GetValueType.argtypes = (FPDF_ATTACHMENT, FPDF_BYTESTRING)
FPDFAttachment_GetValueType.restype = FPDF_OBJECT_TYPE

# ./fpdf_attachment.h: 108
FPDFAttachment_SetStringValue = _libs['pdfium']['FPDFAttachment_SetStringValue']
FPDFAttachment_SetStringValue.argtypes = (FPDF_ATTACHMENT, FPDF_BYTESTRING, FPDF_WIDESTRING)
FPDFAttachment_SetStringValue.restype = FPDF_BOOL

# ./fpdf_attachment.h: 129
FPDFAttachment_GetStringValue = _libs['pdfium']['FPDFAttachment_GetStringValue']
FPDFAttachment_GetStringValue.argtypes = (FPDF_ATTACHMENT, FPDF_BYTESTRING, POINTER(FPDF_WCHAR), c_ulong)
FPDFAttachment_GetStringValue.restype = c_ulong

# ./fpdf_attachment.h: 146
FPDFAttachment_SetFile = _libs['pdfium']['FPDFAttachment_SetFile']
FPDFAttachment_SetFile.argtypes = (FPDF_ATTACHMENT, FPDF_DOCUMENT, POINTER(None), c_ulong)
FPDFAttachment_SetFile.restype = FPDF_BOOL

# ./fpdf_attachment.h: 170
FPDFAttachment_GetFile = _libs['pdfium']['FPDFAttachment_GetFile']
FPDFAttachment_GetFile.argtypes = (FPDF_ATTACHMENT, POINTER(None), c_ulong, POINTER(c_ulong))
FPDFAttachment_GetFile.restype = FPDF_BOOL

# ./fpdf_catalog.h: 26
FPDFCatalog_IsTagged = _libs['pdfium']['FPDFCatalog_IsTagged']
FPDFCatalog_IsTagged.argtypes = (FPDF_DOCUMENT, )
FPDFCatalog_IsTagged.restype = FPDF_BOOL

# ./fpdf_catalog.h: 59
FPDFCatalog_SetLanguage = _libs['pdfium']['FPDFCatalog_SetLanguage']
FPDFCatalog_SetLanguage.argtypes = (FPDF_DOCUMENT, FPDF_WIDESTRING)
FPDFCatalog_SetLanguage.restype = FPDF_BOOL

# ./fpdf_dataavail.h: 23
class struct__FX_FILEAVAIL (Structure):
    __slots__ = ('version', 'IsDataAvail')

struct__FX_FILEAVAIL._fields_ = (
    ('version', c_int),
    ('IsDataAvail', CFUNCTYPE(UNCHECKED(FPDF_BOOL), POINTER(struct__FX_FILEAVAIL), c_size_t, c_size_t)),
)

# ./fpdf_dataavail.h: 52
FX_FILEAVAIL = struct__FX_FILEAVAIL

# ./fpdf_dataavail.h: 62
FPDFAvail_Create = _libs['pdfium']['FPDFAvail_Create']
FPDFAvail_Create.argtypes = (POINTER(FX_FILEAVAIL), POINTER(FPDF_FILEACCESS))
FPDFAvail_Create.restype = FPDF_AVAIL

# ./fpdf_dataavail.h: 68
FPDFAvail_Destroy = _libs['pdfium']['FPDFAvail_Destroy']
FPDFAvail_Destroy.argtypes = (FPDF_AVAIL, )
FPDFAvail_Destroy.restype = None

# ./fpdf_dataavail.h: 71
class struct__FX_DOWNLOADHINTS (Structure):
    __slots__ = ('version', 'AddSegment')

struct__FX_DOWNLOADHINTS._fields_ = (
    ('version', c_int),
    ('AddSegment', CFUNCTYPE(UNCHECKED(None), POINTER(struct__FX_DOWNLOADHINTS), c_size_t, c_size_t)),
)

# ./fpdf_dataavail.h: 90
FX_DOWNLOADHINTS = struct__FX_DOWNLOADHINTS

# ./fpdf_dataavail.h: 109
FPDFAvail_IsDocAvail = _libs['pdfium']['FPDFAvail_IsDocAvail']
FPDFAvail_IsDocAvail.argtypes = (FPDF_AVAIL, POINTER(FX_DOWNLOADHINTS))
FPDFAvail_IsDocAvail.restype = c_int

# ./fpdf_dataavail.h: 124
FPDFAvail_GetDocument = _libs['pdfium']['FPDFAvail_GetDocument']
FPDFAvail_GetDocument.argtypes = (FPDF_AVAIL, FPDF_BYTESTRING)
FPDFAvail_GetDocument.restype = FPDF_DOCUMENT

# ./fpdf_dataavail.h: 135
FPDFAvail_GetFirstPageNum = _libs['pdfium']['FPDFAvail_GetFirstPageNum']
FPDFAvail_GetFirstPageNum.argtypes = (FPDF_DOCUMENT, )
FPDFAvail_GetFirstPageNum.restype = c_int

# ./fpdf_dataavail.h: 157
FPDFAvail_IsPageAvail = _libs['pdfium']['FPDFAvail_IsPageAvail']
FPDFAvail_IsPageAvail.argtypes = (FPDF_AVAIL, c_int, POINTER(FX_DOWNLOADHINTS))
FPDFAvail_IsPageAvail.restype = c_int

# ./fpdf_dataavail.h: 182
FPDFAvail_IsFormAvail = _libs['pdfium']['FPDFAvail_IsFormAvail']
FPDFAvail_IsFormAvail.argtypes = (FPDF_AVAIL, POINTER(FX_DOWNLOADHINTS))
FPDFAvail_IsFormAvail.restype = c_int

# ./fpdf_dataavail.h: 198
FPDFAvail_IsLinearized = _libs['pdfium']['FPDFAvail_IsLinearized']
FPDFAvail_IsLinearized.argtypes = (FPDF_AVAIL, )
FPDFAvail_IsLinearized.restype = c_int

# ./fpdf_doc.h: 31
enum_anon_5 = c_int

# ./fpdf_doc.h: 31
FILEIDTYPE_PERMANENT = 0

# ./fpdf_doc.h: 31
FILEIDTYPE_CHANGING = 1

# ./fpdf_doc.h: 31
FPDF_FILEIDTYPE = enum_anon_5

# ./fpdf_doc.h: 59
FPDFBookmark_GetFirstChild = _libs['pdfium']['FPDFBookmark_GetFirstChild']
FPDFBookmark_GetFirstChild.argtypes = (FPDF_DOCUMENT, FPDF_BOOKMARK)
FPDFBookmark_GetFirstChild.restype = FPDF_BOOKMARK

# ./fpdf_doc.h: 72
FPDFBookmark_GetNextSibling = _libs['pdfium']['FPDFBookmark_GetNextSibling']
FPDFBookmark_GetNextSibling.argtypes = (FPDF_DOCUMENT, FPDF_BOOKMARK)
FPDFBookmark_GetNextSibling.restype = FPDF_BOOKMARK

# ./fpdf_doc.h: 88
FPDFBookmark_GetTitle = _libs['pdfium']['FPDFBookmark_GetTitle']
FPDFBookmark_GetTitle.argtypes = (FPDF_BOOKMARK, POINTER(None), c_ulong)
FPDFBookmark_GetTitle.restype = c_ulong

# ./fpdf_doc.h: 102
FPDFBookmark_GetCount = _libs['pdfium']['FPDFBookmark_GetCount']
FPDFBookmark_GetCount.argtypes = (FPDF_BOOKMARK, )
FPDFBookmark_GetCount.restype = c_int

# ./fpdf_doc.h: 114
FPDFBookmark_Find = _libs['pdfium']['FPDFBookmark_Find']
FPDFBookmark_Find.argtypes = (FPDF_DOCUMENT, FPDF_WIDESTRING)
FPDFBookmark_Find.restype = FPDF_BOOKMARK
